--- a/src/style.css
+++ b/src/style.css
@@ -2,4 +2,33 @@
   body {
     background-color: black;
   }
+  .win-ui {
+    display: none;
+  }
+  body.win .win-ui {
+    box-sizing: border-box;
+    display: block;
+    width: 800px;
+    height: 600px;
+    position: absolute;
+    
+    /* account for body's margin */
+    top: 8px;
+    left: 8px;
+
+    text-align: center;
+    padding-top: 200px;
+    h1 {
+      font-family: Arial;
+      font-size: 32px;
+      line-height: 32px;
+    }
+    button {
+      pointer-events: all;
+      cursor: pointer;
+      font-size: 18px;
+      line-height: 32px;
+      letter-spacing: 0.75px;
+    }
+  }
 }
