--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,11 @@
   body {
     background-color: black;
   }
+  #wrapper {
+    position: relative;
+    margin: 0 auto;
+    width: 304px;
+  }
   .start-button {
     pointer-events: all;
     cursor: pointer;
@@ -18,6 +23,23 @@
     border: 2px solid silver;
     color: silver;
   }
+  .play-ui {
+    margin: 30px auto 20px auto;
+    h1, p{
+      font-family: Arial;
+      color: white;
+      margin: 7px 3px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 32px;
+      line-height: 32px;
+    }
+    p {
+      font-size: 16px;
+      line-height: 16px;
+    }
+  }
   .win-ui {
     display: none;
   }
@@ -27,11 +49,6 @@
     width: 304px;
     height: 304px;
     position: absolute;
-    
-    /* account for body's margin */
-    top: 8px;
-    left: 8px;
-
     text-align: center;
     padding-top: 100px;
     h1 {
